# nemu

./: .gitmodules  .tokeignore  Cargo.toml  README.md  RELEASE.md  rust-toolchain.toml  shell.nix
.github/workflows/: test.yml
crates/emulator/: Cargo.toml
crates/emulator/packaging/: .gitignore  macos.sh
crates/emulator/src/: apu.rs  cart.rs  config.rs  controller.rs  cpu.rs  debug.rs  emulator.rs  lib.rs  main.rs  nes_cpu_bus.rs  op.rs  ppu.rs  util.rs
crates/emulator/src/apu/: ch_pulse.rs  mod.rs  sequencer.rs
crates/emulator/src/carts/: cnrom.rs  generic_cart.rs  mmc1.rs  mmc3.rs  mod.rs  nrom.rs  reader.rs  uxrom.rs
crates/emulator/src/carts/mappers/: cnrom.rs  mmc1.rs  mmc3.rs  mod.rs  nrom.rs  uxrom.rs
crates/emulator/src/cpu/: cpu.rs  mod.rs  op.rs
crates/emulator/src/test/: mod.rs  nestest.rs  single_step_tests.rs
crates/gui/: Cargo.toml
crates/gui/src/: action.rs  app.rs  audio_runner.rs  main.rs  map.rs
crates/gui/src/app/: debug.rs
crates/libretro-core/: Cargo.toml  README.md  nemu_libretro.info
crates/libretro-core/src/: lib.rs
crates/wasm/: Cargo.toml  package.sh
crates/wasm/src/: lib.rs
misc/: logo.aseprite
misc/packaging/: Info.plist  macos.sh
nes/: Cargo.toml
nes/src/: apu.rs  bus.rs  cart.rs  cpu.rs  emulator.rs  lib.rs  main.rs  ppu.rs  rom.rs
nes/src/test/: nestest.rs
src/: bus.rs  cart.rs  controller.rs  cpu.rs  emulator.rs  lib.rs  main.rs  nes.rs  op.rs  ppu.rs
src/test/: nestest.rs
