[package]
name = "nemu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eframe = "0.27.2"
egui_extras = "0.27.2"
rfd = { version = "0.14.1", default-features = false, features = ["gtk3"] }
