[package]
name = "nemu-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
bincode = "2.0.0-rc.3"
bitfield-struct = "0.8.0"
bitflags = "2.5.0"

[dev-dependencies]
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"
