[package]
name = "nemu-emulator"
authors = ["Emanuel Särnhammar <emanuel@quaqqer.com>"]
version = "0.1.0"
edition = "2021"
include = ["**/*.rs", "res/palette/2c02.pal"]
description = "A library for NES emulation."
repository = "https://github.com/Quaqqer/nemu"
license-file = "LICENSE.md"

[dependencies]
anyhow = "1.0.91"
bincode = "2.0.0-rc.3"
bitfield-struct = "0.8.0"
bitflags = "2.5.0"

[dev-dependencies]
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"
