[package]
name = "nemu-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "2.0.0-rc.3"
directories = "6.0.0"
eframe = "0.27.2"
egui_extras = "0.27.2"
image = "0.25.5"
nemu-emulator = { version = "0.1.0", path = "../emulator" }
rfd = { version = "0.14.1", default-features = false, features = ["gtk3"] }
