[package]
name = "nemu-wasm"
version = "0.1.0"
authors = ["Emanuel Särnhammar <emanuel@quaqqer.com>"]
edition = "2018"
publish = false
description = "A NES emulator written in Rust compiled to WASM."
repository = "https://github.com/Quaqqer/nemu"
license-file = "LICENSE.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.7"
nemu-emulator = { version = "0.1.0", path = "../emulator" }
anyhow = "1.0.91"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
